--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Booking ticket</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Hello world
+        </h1>
+
+    </div>
 </body>
 </html>
