--- a/ghostbusters.html
+++ b/ghostbusters.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ghostbusters: Afterlife</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:weight@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/swiper.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -578,6 +580,28 @@
       <button type="submit" class="button placeselector__submit">Submit</button>
     </div>
   </div>
+  <footer>
+    <div class="footer">
+      <a href="./index.html" class="footer-logo">
+        <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
+      </a>
+      <ul class="footer__info">
+        <li>About Us</li>
+        <li>Our partners</li>
+        <li>Contact Us</li>
+        <li>Work with us</li>
+      </ul>
+      <div class="footer__logos">
+        <img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo">
+        <img src="./img/instagram.svg" alt="instagram logo" class="footer__logo">
+        <img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo">
+        <img src="./img/twitter.svg" alt="twitter logo" class="footer__logo">
+      </div>
+    </div>
+    <div class="copyright">
+      &copy; Work done by cool girl and boys. 2020
+    </div>
+  </footer>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/swiper.min.js"></script>
