--- a/signnup.html
+++ b/signnup.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:weight@300;700;900&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -43,5 +46,27 @@
         <button class="button button-block">Get Started</button>
     </form>
     </div>
+    <footer>
+        <div class="footer">
+          <a href="./index.html" class="footer-logo">
+            <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
+          </a>
+          <ul class="footer__info">
+            <li>About Us</li>
+            <li>Our partners</li>
+            <li>Contact Us</li>
+            <li>Work with us</li>
+          </ul>
+          <div class="footer__logos">
+            <img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo">
+            <img src="./img/instagram.svg" alt="instagram logo" class="footer__logo">
+            <img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo">
+            <img src="./img/twitter.svg" alt="twitter logo" class="footer__logo">
+          </div>
+        </div>
+        <div class="copyright">
+          &copy; Work done by cool girl and boys. 2020
+        </div>
+      </footer>
 </body>
 </html>
