--- a/signnup.html
+++ b/signnup.html
@@ -52,16 +52,16 @@
             <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
           </a>
           <ul class="footer__info">
-            <li>About Us</li>
-            <li>Our partners</li>
-            <li>Contact Us</li>
-            <li>Work with us</li>
+            <li><a href="#">Our partners </a></li>
+            <li><a href="#">About Us </a></li>
+            <li><a href="#">Contact Us </a></li>
+            <li><a href="#">Work with us </a></li>
           </ul>
           <div class="footer__logos">
-            <img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo">
-            <img src="./img/instagram.svg" alt="instagram logo" class="footer__logo">
-            <img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo">
-            <img src="./img/twitter.svg" alt="twitter logo" class="footer__logo">
+            <a href="#"><img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo"></a>
+            <a href="#"><img src="./img/instagram.svg" alt="instagram logo" class="footer__logo"></a>
+            <a href="#"><img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo"></a>
+            <a href="#"><img src="./img/twitter.svg" alt="twitter logo" class="footer__logo"></a>
           </div>
         </div>
         <div class="copyright">
