--- a/ghostbusters.html
+++ b/ghostbusters.html
@@ -24,13 +24,13 @@
       <nav class="navigation">
         <a href="./index.html" class="navigation-link">Main</a>
         <a href="./movies.html" class="navigation-link">Films</a>
-        <a href="#" class="navigation-link">News</a>
-        <a href="#" class="navigation-link">About Us</a>
+        <a href="./profile.html" class="navigation-link">Profile</a>
+        <a href="./about-us.html" class="navigation-link">About Us</a>
       </nav>
       <div class="button-group">
         <span class="user-name"></span>
-        <a href="./signnup.html"><button class="button sign-up">Sign Up</button></a>
-        <button class="button login button-auth">Sign In</button>
+        <a href="./signnup.html"><button class="button sign-up">Sign Up</button></a> 
+        <button class="button login  button-auth">Sign In</button>
         <button class="button logout button-out">Sign Out</button>
       </div>
     </div>
@@ -54,9 +54,6 @@
             <img class="trailer-button-icon" src="img/play.svg" alt="play" />
             <span class="trailer-button-text">Watch trailer</span>
           </a>
-          <button class="reserve__place">
-            Reserve Place
-          </button>
         </div>
         <!-- /.film-trailer -->
         <div class="film-text">
@@ -121,6 +118,62 @@
     </div>
     <!-- /.container -->
   </section>
+
+  <div class="booking">
+    <div class="container">
+     <div class="booking__wrapper">
+      <div class="book__table">
+        <h4>Available sessions</h4>
+        <table class="book" border="2">
+          <tr>
+            <th>Session</th>
+            <th>Time</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>10:00</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>12:00</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>15:00</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>17:00</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>19:00</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>22:00</td>
+          </tr>
+        </table>
+        <button class="reserve__place">
+          Reserve Place
+        </button>
+      </div>
+      <div class="comment">
+        <form method="post">
+          <p><b>Write your comment:</b></p>
+          <p><textarea name="comment" cols="30" rows="10"></textarea></p>
+          <p><input type="submit" value="Send" class="book__submit"></p>
+        </form>
+      </div>
+     </div>
+    </div>
+  </section>
+
+
+
+
+
+
 
   <section class="cast">
     <div class="container">
@@ -216,7 +269,7 @@
           <img src="img/gh-creators/eric_steelberg.jpg" alt="Eric Steelberg" class="card-image" />
           <div class="card-text">
             <h3 class="name">Eric Steelberg</h3>
-            <span class="en-name">Cinematographer</span>
+            <span class="en-name">Cinematograph</span>
           </div>
         </div>
         <!-- /.card -->
@@ -322,33 +375,73 @@
     </div>
     <!-- /.container -->
   </section>
+  
   <div class="modal-auth">
     <div class="modal-dialog modal-dialog-auth">
-      <button class="close-auth">&times;</button>
-      <form id="logInForm">
-        <fieldset class="modal-body">
-          <legend class="modal-title">Authorization</legend>
-          <label class="label-auth">
-            <span>Username</span>
-            <input id="login" type="text">
-          </label>
-          <label class="label-auth">
-            <span>Password</span>
-            <input id="password" type="password">
-          </label>
-        </fieldset>
-        <!-- /.modal-body -->
-        <div class="modal-footer">
-          <div class="footer-buttons">
-            <button class="button button-primary button-login" type="submit">Log In</button>
-          </div>
-        </div>
-      </form>
-      <!-- /.modal-footer -->
+        <button class="close-auth">&times;</button>
+        <form id="logInForm">
+            <fieldset class="modal-body">
+                <legend class="modal-title">Authorization</legend>
+                <label class="label-auth">
+                    <span>Username</span>
+                    <input id="login" type="text">
+                </label>
+                <label class="label-auth">
+                    <span>Password</span>
+                    <input id="password" type="password">
+                </label>
+
+                <input type="checkbox" name="remember" id="remember"><label for="remember" class="remember-text">Remember Me</label> 
+                
+            </fieldset>
+            <!-- /.modal-body -->
+            <div class="modal-footer">
+                <div class="footer-buttons">
+                    <button class="button button-primary button-login" type="submit">Log In</button>
+                </div>
+                <p class="footer__sign-up">Don't have an account? <a href="./signnup.html">Sign Up</a></p>
+            </div>
+        </form>
+        <!-- /.modal-footer -->
     </div>
     <!-- /.modal-dialog -->
+</div>
+  <div class="modal__cinema-select ">
+    <div class="modal-dialog modal-dialog-auth">
+      <h3 class="cinema-select__title">Please in order to choose a seat specify the information below:</h3>
+      <div class="cinema-select">
+        <form method="post">
+          <p><label for="cinema" class='blue-border'>Choose Cinema:</label>
+          <select name="cinema" id="cinema" class='blue-border'>
+
+            <option value="Choose Cinema" >Choose Cinema</option>
+            <option value="MoviePark" >Movie Park</option>
+            <option value="Horror Kingdom">Horror Kingdom</option>
+            <option value="Peter Parker Cinema">Peter Parker Cinema</option>
+            <option value="Watch Together">Watch Together</option>
+            <option value="Filmland">Filmland</option>
+            <option value="Nights with movie">Nights with movie</option>
+          </select></p>
+          <p><label for="movie" class='blue-border'>Choose Movie:</label>
+          <select name="movie" id="movie" class='blue-border'>
+            <option value="Choose Movie">Choose Movie</option>
+            <option value="Ghostbusters">Ghostbusters</option>
+            <option value="James Bond">James Bond</option>
+            <option value="Death on the Nile">Death on the Nile</option>
+            <option value="Free guy">Free guy</option>
+            <option value="The Croods">The Croods</option>
+            <option value="A quiet place II">A quiet place II</option>
+          </select></p>
+          <p><label for="date" class='blue-border'>Choose Date:</label>
+          <input type="date" name="date" id="date" class='blue-border'></p>
+          <p><label for="time" class='blue-border'>Choose Time:</label>
+          <input type="time" name="time" id="time" class='blue-border'></p>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="modal__place-selector">
+  <div class="modal__place-selector ">
     <div class="modal-dialog modal-dialog-auth">
       <h3>Where do you want to seat:</h3>
       <button class="close-reservation">&times;</button>
@@ -580,22 +673,36 @@
       <button type="submit" class="button placeselector__submit">Submit</button>
     </div>
   </div>
+  <div class="modal__ticket-information is-open">
+    <div class="modal-dialog modal-dialog-auth">
+      <h3>Ticket information</h3>
+      <div class="ticket-information">
+        <p>Cinema name: <span class="cinema__name">x</span></p>
+        <p>Movie name: <span class="movie__name">x</span></p>
+        <p>Time: <span class='session-time'>x</span></p>
+        <p>Place: <span class="session-place">x</span></p>
+        <p></p>
+      </div>
+      <button class="ticket-information-button">Book more</button>
+      <a href="./profile.html"><button class="ticket-information-button">Go to profile</button></a>
+    </div>
+  </div>
   <footer>
     <div class="footer">
       <a href="./index.html" class="footer-logo">
         <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
       </a>
       <ul class="footer__info">
-        <li>About Us</li>
-        <li>Our partners</li>
-        <li>Contact Us</li>
-        <li>Work with us</li>
+        <li><a href="#">Our partners </a></li>
+        <li><a href="#">About Us </a></li>
+        <li><a href="#">Contact Us </a></li>
+        <li><a href="#">Work with us </a></li>
       </ul>
       <div class="footer__logos">
-        <img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo">
-        <img src="./img/instagram.svg" alt="instagram logo" class="footer__logo">
-        <img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo">
-        <img src="./img/twitter.svg" alt="twitter logo" class="footer__logo">
+        <a href="#"><img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo"></a>
+        <a href="#"><img src="./img/instagram.svg" alt="instagram logo" class="footer__logo"></a>
+        <a href="#"><img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo"></a>
+        <a href="#"><img src="./img/twitter.svg" alt="twitter logo" class="footer__logo"></a>
       </div>
     </div>
     <div class="copyright">
