--- a/movies.html
+++ b/movies.html
@@ -16,91 +16,92 @@
 
 <body>
     <header class="header">
-            <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
+        <a href="./index.html" class="header-logo">
+          <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
+        </a>
         <div class="m-menu">
-            <input type="search" class="search-input" placeholder="Search by films" />
-            <nav class="navigation">
-                <a href="./index.html" class="navigation-link">Main</a>
-                <a href="./movies.html" class="navigation-link">Films</a>
-                <a href="#" class="navigation-link">News</a>
-                <a href="#" class="navigation-link">About Us</a>
-            </nav>
-            <div class="button-group">
-                <span class="user-name"></span>
-                <a href="./signnup.html"><button class="button sign-up">Sign Up</button></a>
-                <button class="button login  button-auth">Sign In</button>
-                <button class="button logout button-out">Sign Out</button>
-            </div>
-        </div>
-        <div class="mobile-buttons">
-            <button class="search-button">
-                <img src="img/search-icon.svg" alt="search" />
-            </button>
-            <button class="m-menu-button">
-                <span class="menu-line"></span>
-                <span class="menu-line"></span>
-                <span class="menu-line"></span>
-            </button>
-        </div>
-    </header>
-    <div class="cinemas">
-        <section class="section__heading">
-            <h2 class="section__title">Cinemas</h2>
-        </section>
-        <div class="cards cards__cinemas">
-        </div>
-    </div>
-    <div class="movies hide">
-        <div class="cards cards__movies"></div>
-    </div>
-    <div class="modal-auth">
-        <div class="modal-dialog modal-dialog-auth">
-            <button class="close-auth">&times;</button>
-            <form id="logInForm">
-                <fieldset class="modal-body">
-                    <legend class="modal-title">Authorization</legend>
-                    <label class="label-auth">
-                        <span>Username</span>
-                        <input id="login" type="text">
-                    </label>
-                    <label class="label-auth">
-                        <span>Password</span>
-                        <input id="password" type="password">
-                    </label>
-                </fieldset>
-                <!-- /.modal-body -->
-                <div class="modal-footer">
-                    <div class="footer-buttons">
-                        <button class="button button-primary button-login" type="submit">Log In</button>
-                    </div>
-                </div>
-            </form>
-            <!-- /.modal-footer -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-    <footer>
-        <div class="footer">
-          <a href="./index.html" class="footer-logo">
-            <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
-          </a>
-          <ul class="footer__info">
-            <li>About Us</li>
-            <li>Our partners</li>
-            <li>Contact Us</li>
-            <li>Work with us</li>
-          </ul>
-          <div class="footer__logos">
-            <img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo">
-            <img src="./img/instagram.svg" alt="instagram logo" class="footer__logo">
-            <img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo">
-            <img src="./img/twitter.svg" alt="twitter logo" class="footer__logo">
+          <input type="search" class="search-input" placeholder="Search by films" />
+          <nav class="navigation">
+            <a href="./index.html" class="navigation-link">Main</a>
+            <a href="./movies.html" class="navigation-link">Films</a>
+            <a href="./profile.html" class="navigation-link">Profile</a>
+            <a href="./about-us.html" class="navigation-link">About Us</a>
+          </nav>
+          <div class="button-group">
+            <span class="user-name"></span>
+            <a href="./signnup.html"><button class="button sign-up">Sign Up</button></a> 
+            <button class="button login  button-auth">Sign In</button>
+            <button class="button logout button-out">Sign Out</button>
           </div>
         </div>
-        <div class="copyright">
-          &copy; Work done by cool girl and boys. 2020
+        <div class="mobile-buttons">
+          <button class="search-button">
+            <img src="img/search-icon.svg" alt="search" />
+          </button>
+          <button class="m-menu-button">
+            <span class="menu-line"></span>
+            <span class="menu-line"></span>
+            <span class="menu-line"></span>
+          </button>
         </div>
-      </footer>
+      </header>
+    
+    <div class="movies">
+        <div class="cards cards__movies"></div>
+    </div>
+   
+    <div class="modal-auth">
+      <div class="modal-dialog modal-dialog-auth">
+          <button class="close-auth">&times;</button>
+          <form id="logInForm">
+              <fieldset class="modal-body">
+                  <legend class="modal-title">Authorization</legend>
+                  <label class="label-auth">
+                      <span>Username</span>
+                      <input id="login" type="text">
+                  </label>
+                  <label class="label-auth">
+                      <span>Password</span>
+                      <input id="password" type="password">
+                  </label>
+
+                  <input type="checkbox" name="remember" id="remember"><label for="remember" class="remember-text">Remember Me</label> 
+                  
+              </fieldset>
+              <!-- /.modal-body -->
+              <div class="modal-footer">
+                  <div class="footer-buttons">
+                      <button class="button button-primary button-login" type="submit">Log In</button>
+                  </div>
+                  <p class="footer__sign-up">Don't have an account? <a href="./signnup.html">Sign Up</a></p>
+              </div>
+          </form>
+          <!-- /.modal-footer -->
+      </div>
+      <!-- /.modal-dialog -->
+  </div>
+  <footer>
+    <div class="footer">
+      <a href="./index.html" class="footer-logo">
+        <img width="68" src="img/logo.png" alt="Logo: film" class="logo" />
+      </a>
+      <ul class="footer__info">
+        <li><a href="#">Our partners </a></li>
+        <li><a href="#">About Us </a></li>
+        <li><a href="#">Contact Us </a></li>
+        <li><a href="#">Work with us </a></li>
+      </ul>
+      <div class="footer__logos">
+        <a href="#"><img src="./img/facebook.svg" alt="Facebook logo" class="footer__logo"></a>
+        <a href="#"><img src="./img/instagram.svg" alt="instagram logo" class="footer__logo"></a>
+        <a href="#"><img src="./img/google-plus.svg" alt="google-plus logo" class="footer__logo"></a>
+        <a href="#"><img src="./img/twitter.svg" alt="twitter logo" class="footer__logo"></a>
+      </div>
+    </div>
+    <div class="copyright">
+      &copy; Work done by cool girl and boys. 2020
+    </div>
+  </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
